--- a/ElectricalPowerSystems/App.xaml
+++ b/ElectricalPowerSystems/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ElectricalPowerSystems"
-             StartupUri="MainWindow.xaml">
+             StartupUri="./GUI/ModelEditor/Windows/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
