--- a/ElectricalPowerSystems/GUI/ModelEditor/Windows/ChartWindow.xaml
+++ b/ElectricalPowerSystems/GUI/ModelEditor/Windows/ChartWindow.xaml
@@ -1,25 +1,71 @@
-﻿<Window x:Class="ElectricalPowerSystems.ChartWindow"
+﻿<Window x:Class="ElectricalPowerSystems.GUI.ModelEditor.Windows.ChartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        xmlns:local="clr-namespace:ElectricalPowerSystems"
+        xmlns:local="clr-namespace:ElectricalPowerSystems.GUI.ModelEditor.Windows"
         mc:Ignorable="d"
-        Title="ChartWindow" Height="450" Width="800">
+        Title="Графики" Height="450" Width="800">
     <Grid>
+        <Grid.Effect>
+            <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
+        </Grid.Effect>
+        <Grid.Resources>
+            <local:OpacityConverter x:Key="OpacityConverter"></local:OpacityConverter>
+        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <lvc:CartesianChart x:Name="FunctionChart" Series="{Binding SeriesCollection}"  LegendLocation="Right" Margin="10,10,10,10" Grid.Column="1" Grid.Row="0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <lvc:CartesianChart x:Name="FunctionChart" DisableAnimations="True" Series="{Binding SeriesCollection}" 
+                            Zoom="{Binding ZoomingMode}" Hoverable="False" DataTooltip="{x:Null}"
+                            LegendLocation="None" Margin="10,10,10,10" Grid.Column="0" Grid.Row="0">
             <lvc:CartesianChart.AxisY>
-                <lvc:Axis x:Name="YAxis" Title="x"/>
+                <lvc:Axis Foreground="Black" FontSize="14" x:Name="YAxis" Title="Value">
+                    <lvc:Axis.Separator>
+                        <lvc:Separator StrokeThickness="1" Stroke="Black"/>
+                    </lvc:Axis.Separator>
+                </lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis x:Name="XAxis" Title="t"/>
+                <lvc:Axis Foreground="Black" FontSize="14"  x:Name="XAxis" Title="time">
+                    <lvc:Axis.Separator>
+                        <lvc:Separator  StrokeThickness="1" Stroke="Black"/>
+                    </lvc:Axis.Separator>
+                </lvc:Axis>
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
-        <Button HorizontalAlignment="Right" Margin="0,5,10,5" Grid.Row="1" Content="Button" VerticalAlignment="Top" Width="75"/>
+        <ListBox x:Name="LegendListBox" Grid.Row="0" Grid.Column="1" 
+                 Panel.ZIndex="1" 
+                 Margin="10 0 10 00"
+                 ItemsSource="{Binding SeriesCollection}"
+                 BorderThickness="0" Background="Transparent" PreviewMouseDown="LegendListBox_OnPreviewMouseDown">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                        <TextBlock Cursor="Hand" Text="{Binding (lvc:LineSeries.Title)}" 
+                                           Foreground="{Binding (lvc:LineSeries.Stroke)}"
+                                           Opacity="{Binding (lvc:LineSeries.Visibility), Converter={StaticResource OpacityConverter}}"
+                                           FontSize="22"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="{x:Type ListBoxItem}">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+        <Button HorizontalAlignment="Right" Margin="0,10,10,10" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Content="Закрыть" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
     </Grid>
 </Window>
